--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -3,11 +3,9 @@ on: [push, pull_request]
 jobs:
   test:
     name: Run Tests
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-latest
     strategy:
       fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
     - uses: actions/checkout@v1
     - name: Test
